Bug 1334027 - Add unloaded modules and process/thread data to minidumps. r=ted

MozReview-Commit-ID: LpiE5f9dYqM